<resources>
    <string name="app_name">Awaken</string>
    <string name="title_presets">Meditation</string>
    <string name="title_stats">Statistics</string>
    <string name="title_settings">Settings</string>

    <!-- Fragments' labels -->
    <string name="label_presets">Meditation presets</string>
    <string name="label_add_preset">Add preset</string>

    <!-- Dummy labels -->
    <string name="text_fragment_stats">Oops! Stats haven\'t been set up yet.</string>
    <string name="text_fragment_settings">Settings are gonna be here, someday…</string>
    <string name="dummy_content">Meditating</string>

    <!-- Presets fragment -->
    <string name="meditation_name_with_ordinal">Meditation %d</string>

    <!-- Add preset fragment -->
    <string name="preset_name">Meditation Name</string>
    <string name="name_input_error_message">This field cannot be empty</string>
    <string name="duration_label">Duration (minutes):</string>
    <string name="duration_text" translatable="false">10</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="meditation_name">Meditation %d</string>

    <!-- Preset list item -->
    <string name="button_meditate">MEDITATE</string>
    <string name="duration">%d min</string>

    <!-- Content descriptions -->
    <string name="add_preset_fab_description">Add meditation preset button</string>
    <string name="preset_icon_description">Preset icon</string>
    <string name="save_preset_fab_description">Save meditation preset</string>
    <string name="pause_or_continue_fab_description">Pause or continue meditation</string>
    <string name="finish_session_fab_description">Finish the meditation</string>

    <!-- Session activity -->
    <string name="colon_divider" translatable="false">:</string>
    <string name="_10" translatable="false">10</string>
    <string name="_00" translatable="false">00</string>
    <string name="channel_name">Meditation session channel</string>
    <string name="channel_description"
        >Shows a permanent notification during a meditation session</string>

    <plurals name="minutes_left">
        <item quantity="one">%d minute left</item>
        <item quantity="other">%d minutes left</item>
    </plurals>
    <plurals name="session_lasted_minutes">
        <item quantity="one">Meditation lasted %d minute</item>
        <item quantity="other">Meditation lasted %d minutes</item>
    </plurals>

    <string name="info_session_ended">Meditation ended</string>
    <string name="question_quit_without_saving">Quit without saving?</string>
    <string name="answer_quit">Quit</string>
    <string name="title_session_active">Session is active</string>
    <string name="answer_cancel">Cancel</string>
    <string name="checkbox_dont_save">Don\'t save</string>
    <string name="button_quit">Quit</string>

    <!-- Stats fragment -->
    <string name="bar_chart_label">Meditation time</string>
</resources>
