<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/nav_presets">

    <fragment
        android:id="@+id/nav_presets"
        android:name="com.diyartaikenov.app.awaken.ui.presets.PresetsFragment"
        android:label="@string/label_presets"
        tools:layout="@layout/fragment_presets" >
        <action
            android:id="@+id/action_nav_presets_to_nav_add_preset_fragment"
            app:destination="@id/nav_add_preset_fragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_preset_fragment"
        android:name="com.diyartaikenov.app.awaken.ui.presets.AddPresetFragment"
        android:label="@string/label_add_preset"
        tools:layout="@layout/fragment_add_preset" >
        <action
            android:id="@+id/action_nav_add_preset_fragment_to_nav_presets"
            app:destination="@id/nav_presets"
            app:popUpTo="@id/nav_presets"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_stats"
        android:name="com.diyartaikenov.app.awaken.ui.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.diyartaikenov.app.awaken.ui.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>