<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.presets.session.SessionActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/timer_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvMinutes"
            style="@style/TimerTextView"
            android:text="@string/_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="3"
            tools:text="10" />

        <TextView
            android:id="@+id/colon_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10sp"
            android:text="@string/colon_divider"
            android:textSize="@dimen/timer_text_size" />

        <TextView
            android:id="@+id/tvSeconds"
            style="@style/TimerTextView"
            android:text="@string/_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            tools:text="00" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tvMinutesLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timer_layout"
        tools:text="8 minutes left" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPauseOrContinue"
        android:src="@drawable/ic_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/pause_or_continue_fab_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabStopSession"
        android:src="@drawable/ic_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_edge_small"
        android:visibility="invisible"
        android:contentDescription="@string/finish_session_fab_description"
        app:fabSize="mini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fabPauseOrContinue" />
</androidx.constraintlayout.widget.ConstraintLayout>
